--- a/Arkenea/Views/Users/UpdateUser.cshtml
+++ b/Arkenea/Views/Users/UpdateUser.cshtml
@@ -76,13 +76,22 @@
         <label for="Address">Address:</label>
         <input type="text" id="Address" name="Address" value="@Model.Address">
 
-        <label for="profilePicture">Profile Picture:</label>
-        <input type="file" id="profilePicture" name="profilePicture">
+        <label for="profileFile">Document:</label>
+        <input type="file" id="profileFile" name="profileFile">
 
-        @if (Model.ProfilePicturePath != null || Model.ProfilePicturePath != "")
+        @if (!string.IsNullOrEmpty(Model.ProfilePicturePath))
         {
-            <img src=@Model.ProfilePicturePath alt="profile pic" height="20" width="20" />
+            <div id="documentContainer">
+
+                <a href="@Model.ProfilePicturePath" download="document">
+                    <button type="button">Download</button>
+                </a>
+
+
+                <span class="delete-icon" onclick="removeDocument()">❌</span>
+            </div>
         }
+
 
         <label for="RoleId">Role:</label>
         <select id="RoleId" name="RoleId" value="@Model.RoleId">
@@ -97,15 +106,13 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script>
         function submitForm() {
-            // Get form data
-            //const formData = new FormData(document.getElementById('userRegistrationForm'));
 
             const firstName = $('#FirstName').val();
             const lastName = $('#LastName').val();
             const email = $('#Email').val();
             const phone = $('#Phone').val();
             const address = $('#Address').val();
-            const profilePicture = $('#profilePicture')[0].files[0];
+            const profileFile = $('#profileFile')[0].files[0];
             const roleId = $('#RoleId').val();
             const userId = $('#UserId').val();
             const id = $('#Id').val();
@@ -120,7 +127,7 @@
             userData.append('RoleId', roleId);
             userData.append('UserId', userId);
             userData.append('Id', id);
-            userData.append('profilePicture', profilePicture);
+            userData.append('profileFile', profileFile);
 
             // Make AJAX call using jQuery
             $.ajax({
@@ -140,6 +147,20 @@
                     // Handle error, e.g., show an error message to the user
                 }
             });
+        }
+
+        function removeDocument() {
+
+            var documentContainer = document.getElementById('documentContainer');
+
+            if (documentContainer) {
+                documentContainer.remove();
+            }
+
+            var fileInput = document.getElementById('profileFile');
+            if (fileInput) {
+                fileInput.value = ''; // Clear the file input value
+            }
         }
     </script>
 
