--- a/Arkenea/Views/Users/UserDetail.cshtml
+++ b/Arkenea/Views/Users/UserDetail.cshtml
@@ -68,14 +68,15 @@
     @if (Model != null)
     {
         <dl>
-            <dt>Profile Picture:</dt>
-            <dd><img src="@Model.ProfilePicturePath" alt="Profile Picture" width="30" height="30" style="border-radius:50%"></dd>
-
+            
             <dt>First Name:</dt>
             <dd>@Model.FirstName</dd>
 
             <dt>Last Name:</dt>
             <dd>@Model.LastName</dd>
+
+            <dt>Email:</dt>
+            <dd>@Model.Email</dd>
 
             <dt>Address:</dt>
             <dd>@Model.Address</dd>
@@ -83,7 +84,14 @@
             <dt>Phone Number:</dt>
             <dd>@Model.Phone</dd>
 
-            
+            <dt>Document:</dt>
+            @if (!string.IsNullOrEmpty(Model.ProfilePicturePath))
+            {
+                <a href="@Model.ProfilePicturePath" download="document">
+                    <button type="button">Download</button>
+                </a>
+            }
+
         </dl>
 
         <a asp-action="UpdateUser" asp-route-userId="@Model.Id">Edit</a>
